# Group2

./: .gitignore  BuyRequestHandler.cpp  BuyRequestHandler.h  CMakeLists.txt  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  HttpHandler.cpp  HttpHandler.h  HttpPacket.cpp  HttpPacket.h  HttpRequestHandler.cpp  HttpRequestHandler.h  HttpRequestPacket.cpp  HttpRequestPacket.h  HttpResponsePacket.cpp  HttpResponsePacket.h  HttpRouterHandler.cpp  HttpRouterHandler.h  LICENCE  NTUSTcs1091.sln.licenseheader  Packet.cpp  Packet.h  RequestHandler.cpp  RequestHandler.h  ResultRequestHandler.cpp  ResultRequestHandler.h  ViewRequestHandler.cpp  ViewRequestHandler.h  main.cpp
src/: BuyRequestHandler.cpp  BuyRequestHandler.h  CMakeLists.txt  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  HttpHandler.cpp  HttpHandler.h  HttpPacket.cpp  HttpPacket.h  HttpRequestHandler.cpp  HttpRequestHandler.h  HttpRequestPacket.cpp  HttpRequestPacket.h  HttpResponsePacket.cpp  HttpResponsePacket.h  HttpRouterHandler.cpp  HttpRouterHandler.h  Packet.cpp  Packet.h  RequestHandler.cpp  RequestHandler.h  RequestParser.cpp  ResultRequestHandler.cpp  ResultRequestHandler.h  Server.cpp  Server.h  ViewRequestHandler.cpp  ViewRequestHandler.h
src/include/: BuyRequestHandler.h  Client.h  ClientManager.h  HttpHandler.h  HttpPacket.h  HttpRequestHandler.h  HttpRequestPacket.h  HttpResponsePacket.h  HttpRouterHandler.h  Packet.h  RequestHandler.h  RequestParser.h  ResultRequestHandler.h  Server.h  ViewRequestHandler.h
src/test/: TestRequestParser.h
test/: CMakeLists.txt
